// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge override the theming props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 1px;
  padding-right: 1px;
  text-transform: uppercase;
  font-size: xs;
  border-radius: sm;
  font-weight: bold;
  color: #D53F8C;
  box-shadow: inset 0 0 0px 1px #D53F8C;
}

<span
    class="chakra-badge emotion-0"
  >
    Badge
  </span>
</DocumentFragment>
`;

exports[`Badge should render with default theming 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 1px;
  padding-right: 1px;
  text-transform: uppercase;
  font-size: xs;
  border-radius: sm;
  font-weight: bold;
  background: gray.100;
  color: gray.800;
}

<span
    class="chakra-badge emotion-0"
  >
    Badge
  </span>
</DocumentFragment>
`;

exports[`Box as - prop works correctly 1`] = `
<DocumentFragment>
  <a
    class="css-0"
    href="www.google.com"
  >
    This is box
  </a>
</DocumentFragment>
`;

exports[`Box should render box correctly 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    This is box
  </div>
</DocumentFragment>
`;
